# afourpaper

./: .gitignore  Gruntfile.js  README.md  bower.json  imageMapper.py  package.json
client/: index.html
client/app/: app.js  app.scss
client/app/account/: account.js
client/app/account/login/: login.controller.js  login.html  login.scss
client/app/account/settings/: settings.controller.js  settings.html
client/app/account/signup/: signup.controller.js  signup.html
client/app/admin/: admin.controller.js  admin.js
client/app/main/: main.controller.js  main.controller.spec.js  main.html  main.js  main.scss
client/components/auth/: auth.service.js  user.service.js
client/components/mongoose-error/: mongoose-error.directive.js
client/components/navbar/: navbar.controller.js  navbar.html
client/components/socket/: socket.service.js
server/: app.js  routes.js
server/api/user/: user.model.js
server/auth/: index.js
server/auth/evernote/: index.js  passport.js
server/config/: local.env.sample.js
server/config/environment/: development.js  index.js  production.js  test.js
server/imagetools/: imageDecode.py  imageEncode.py  imageMapper.py  parseCode.py  test.pdf_c
server/imagetools/encoder/: CMakeLists.txt  Image.cpp  Image.h  decode.cpp  encode.cpp  main.cpp  tools.cpp  tools.h
server/imagetools/source/: CMakeLists.txt  newtest.cpp  pngToData.cpp
server/imagetools/tmpdir/: test.tar  test.tar.bz2  tmpoUng6N.png_c
server/services/: color_data.ps  color_data.ps_c  imageToData.py_c  test.pdf_c
